增加C²数据编号整理功能

--- a/TimingService/app.config
+++ b/TimingService/app.config
@@ -8,6 +8,7 @@
     <add name="SqlConnectionstring" connectionString="Server =10.164.54.86;initial catalog=CYMYMES;uid=sa;pwd=1qaz@WSX3edc" providerName="System.Data.SqlClient" />
     <add name="InSqlConnectionstring" connectionString="Server =10.164.54.85;initial catalog=Runtime;uid=sa;pwd=1qaz@WSX3edc" providerName="System.Data.SqlClient" />
     <add name="SSqlConnectionstring" connectionString="Server =10.164.54.83;initial catalog=MYSPC;uid=sa;pwd=1qaz@WSX3edc" providerName="System.Data.SqlClient" />
+    <add name="C2SqlConnectionstring" connectionString="Server =10.164.54.204\SQL2008R2;initial catalog=C2_Results;uid=sa;pwd=1111" providerName="System.Data.SqlClient" />
     <add name="OracleConnectionString" connectionString="data source=10.99.200.132/tsmesdb;user id=system;password=123;persist security info=False" providerName="System.Data.OracleClient" />
   </connectionStrings>
   <system.serviceModel>
