--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CData.cs" />
+    <Compile Include="CDataResult.cs" />
     <Compile Include="GetCallTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
